fixed weird image stretch

--- a/style.css
+++ b/style.css
@@ -51,10 +51,6 @@ main {
     }
 }
 
-.carousel-inner > .carousel-item > img {
-        height: 456px;
-}
-
 #bertanya, #memesan {
     text-align: left;
 }
